--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ redis==4.6.0
 django-redis==5.4.0
 django-cacheops==7.0.2
 psycopg2-binary==2.9.7
+django-db-connection-pool==1.2.4
 
 # ===== 任务队列 =====
 celery==5.3.4
@@ -129,6 +130,16 @@ responses==0.24.1
 freezegun==1.4.0
 model-bakery==1.17.0
 coverage==7.4.4
+
+# ===== 额外必需依赖 =====
+kombu==5.3.4
+billiard==4.2.0
+vine==5.1.0
+amqp==5.2.0
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 
 # ===== 代码质量 =====
 flake8==6.1.0
