--- a/docker-compose.optimized.yml
+++ b/docker-compose.optimized.yml
@@ -7,20 +7,21 @@ services:
     container_name: qatoolbox_db
     restart: unless-stopped
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME:-qatoolbox}
+      POSTGRES_USER: ${DB_USER:-qatoolbox}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-qatoolbox123}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backups:/backups
     ports:
       - "5432:5432"
-    networks:
-      - qatoolbox_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-qatoolbox} -d ${DB_NAME:-qatoolbox}"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - qatoolbox_network
 
   # Redis缓存
   redis:
@@ -32,30 +33,33 @@ services:
       - redis_data:/data
     ports:
       - "6379:6379"
-    networks:
-      - qatoolbox_network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - qatoolbox_network
 
   # Web应用
   web:
     build:
-      context: ../../
-      dockerfile: Dockerfile
-    image: qatoolbox:latest
+      context: .
+      dockerfile: Dockerfile.optimized
     container_name: qatoolbox_web
     restart: unless-stopped
     ports:
       - "8000:8000"
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings.production
+      - DB_HOST=db
+      - REDIS_URL=redis://redis:6379/0
     env_file:
-      - ../../.env
+      - .env
     volumes:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
-      - ../../logs:/app/logs
+      - ./logs:/app/logs
     depends_on:
       db:
         condition: service_healthy
@@ -63,27 +67,24 @@ services:
         condition: service_healthy
     networks:
       - qatoolbox_network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/tools/health/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
 
-  # Celery Worker
+  # Celery任务队列
   celery:
     build:
-      context: ../../
-      dockerfile: Dockerfile
-    image: qatoolbox:latest
+      context: .
+      dockerfile: Dockerfile.optimized
     container_name: qatoolbox_celery
     restart: unless-stopped
-    command: celery -A QAToolBox worker -l info --concurrency=2
+    command: celery -A config worker -l info --concurrency=2
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings.production
+      - DB_HOST=db
+      - REDIS_URL=redis://redis:6379/0
     env_file:
-      - ../../.env
+      - .env
     volumes:
       - media_volume:/app/media
-      - ../../logs:/app/logs
+      - ./logs:/app/logs
     depends_on:
       db:
         condition: service_healthy
@@ -91,25 +92,23 @@ services:
         condition: service_healthy
     networks:
       - qatoolbox_network
-    healthcheck:
-      test: ["CMD", "celery", "-A", "QAToolBox", "inspect", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
-  # Celery Beat调度器
+  # Celery定时任务
   celery-beat:
     build:
-      context: ../../
-      dockerfile: Dockerfile
-    image: qatoolbox:latest
+      context: .
+      dockerfile: Dockerfile.optimized
     container_name: qatoolbox_celery_beat
     restart: unless-stopped
-    command: celery -A QAToolBox beat -l info
+    command: celery -A config beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings.production
+      - DB_HOST=db
+      - REDIS_URL=redis://redis:6379/0
     env_file:
-      - ../../.env
+      - .env
     volumes:
-      - ../../logs:/app/logs
+      - ./logs:/app/logs
     depends_on:
       db:
         condition: service_healthy
@@ -118,7 +117,7 @@ services:
     networks:
       - qatoolbox_network
 
-  # Nginx反向代理
+  # Nginx反向代理（可选）
   nginx:
     image: nginx:alpine
     container_name: qatoolbox_nginx
@@ -127,20 +126,16 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - /var/www/certbot:/var/www/certbot
+      - ./deploy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - static_volume:/var/www/static:ro
+      - media_volume:/var/www/media:ro
+      - ./deploy/ssl:/etc/nginx/ssl:ro
     depends_on:
       - web
     networks:
       - qatoolbox_network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    profiles:
+      - with-nginx
 
 volumes:
   postgres_data:
@@ -155,6 +150,3 @@ volumes:
 networks:
   qatoolbox_network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
