Add complete Docker deployment configuration for shenyiqing.xin
- Add Dockerfile with Python 3.12 support
- Add docker-compose.yml with all services (web, db, redis, nginx, celery)
- Add nginx.conf for reverse proxy
- Add init.sql for PostgreSQL initialization
- Add environment configuration files
- Add complete deployment scripts for Aliyun
- Add GitHub Actions workflows for CI/CD
- Add comprehensive deployment documentation
- Configure for server 47.103.143.152 and domain shenyiqing.xin
- Include database migration and user creation in deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -146,6 +146,13 @@ black==23.12.1
 isort==5.13.2
 bandit==1.7.5
 
+# ===== Docker和容器化支持 =====
+docker==6.1.3
+docker-compose==1.29.2
+
+# ===== 健康检查支持 =====
+django-health-check==3.17.0
+
 # ===== 基础依赖（按字母排序，避免冲突） =====
 certifi==2025.1.31
 charset-normalizer==3.4.1
