更新requirements.txt，添加所有缺失的依赖包括pillow_heif、psutil、ratelimit等，并创建完整依赖部署脚本

--- a/requirements_complete.txt
+++ b/requirements_complete.txt
@@ -1,4 +1,4 @@
-# QAToolBox 统一依赖文件 - Python 3.9兼容
+# QAToolBox 完整依赖文件 - 包含所有实际使用的依赖
 # =============================================
 # 包含开发、生产、测试所需的完整依赖，无版本冲突
 
