--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# QAToolBox 统一依赖文件 - Python 3.9兼容
+# QAToolBox 完整依赖文件 - 包含所有实际使用的依赖
 # =============================================
 # 包含开发、生产、测试所需的完整依赖，无版本冲突
 
