--- a/requirements.txt
+++ b/requirements.txt
@@ -52,10 +52,10 @@ pillow-heif==0.13.0
 opencv-python==4.8.1.78
 
 # ===== 数据处理和分析 =====
-pandas==2.0.3
-numpy==1.24.4
-matplotlib==3.7.5
-pyecharts==2.0.4
+pandas>=2.1.0
+numpy>=1.26.0
+matplotlib>=3.7.5
+pyecharts>=2.0.4
 
 # ===== 文档处理 =====
 python-docx==1.1.0
