--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,70 @@ classifiers = [
     "Framework :: Django",
     "Framework :: Django :: 4.2",
 ]
+dependencies = [
+    "beautifulsoup4>=4.13.5",
+    "celery>=5.5.3",
+    "channels>=4.3.1",
+    "channels-redis>=4.3.0",
+    "crispy-bootstrap5>=2025.6",
+    "daphne>=4.2.1",
+    "django>=5.2.6",
+    "django-celery-beat>=2.8.1",
+    "django-cors-headers>=4.7.0",
+    "django-crispy-forms>=2.4",
+    "django-csp>=4.0",
+    "django-debug-toolbar>=6.0.0",
+    "django-extensions>=4.1",
+    "django-filter>=25.1",
+    "django-health-check>=3.20.0",
+    "django-ranged-response>=0.2.0",
+    "django-ratelimit>=4.1.0",
+    "django-simple-captcha>=0.6.2",
+    "djangorestframework>=3.16.1",
+    "docx2pdf>=0.1.8",
+    "gevent>=25.8.2",
+    "gunicorn>=23.0.0",
+    "html5lib>=1.1",
+    "lxml>=6.0.1",
+    "matplotlib>=3.10.6",
+    "multitasking>=0.0.12",
+    "mutagen>=1.47.0",
+    "numpy>=2.3.2",
+    "opencv-python>=4.11.0.86",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.2",
+    "pdf2docx>=0.5.8",
+    "pdfminer-six>=20250506",
+    "pdfplumber>=0.11.7",
+    "peewee>=3.18.2",
+    "pillow>=11.3.0",
+    "pillow-heif>=1.1.0",
+    "prettytable>=3.16.0",
+    "psutil>=7.0.0",
+    "pydub>=0.25.1",
+    "pypdfium2>=4.30.0",
+    "pytesseract>=0.3.13",
+    "python-docx>=1.2.0",
+    "python-dotenv>=1.1.1",
+    "python-pptx>=1.0.2",
+    "pyyaml>=6.0.2",
+    "qrcode>=8.2",
+    "ratelimit>=2.2.1",
+    "redis>=6.4.0",
+    "reportlab>=4.4.3",
+    "requests>=2.32.5",
+    "selenium>=4.35.0",
+    "sentry-sdk>=2.36.0",
+    "simplejson>=3.20.1",
+    "structlog>=25.4.0",
+    "tenacity>=9.1.2",
+    "webdriver-manager>=4.0.2",
+    "whitenoise>=6.9.0",
+    "xlrd>=2.0.2",
+    "xlwt>=1.3.0",
+    "xmind>=1.2.0",
+    "yfinance>=0.2.65",
+]
 
 [tool.black]
 line-length = 127
