修复GitHub Actions工作流配置问题
- 创建requirements/dev.txt软链接指向development.txt
- 删除复杂的有问题的CI/CD工作流文件
- 创建简化的simple-ci-cd.yml工作流
- 修复auto-deploy.yml和deploy.yml工作流
- 添加GitHub Secrets配置说明文档
- 统一使用quick-fix-deploy.sh进行部署
- 更新actions版本到v4
- 添加错误处理和回退机制

解决的问题：
- 缺少requirements/dev.txt文件
- 工作流引用不存在的配置和脚本
- 复杂的k8s部署配置
- SSH连接和部署脚本问题

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Deploy to server
       uses: appleboy/ssh-action@v0.1.5
@@ -19,10 +19,11 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
+        port: ${{ secrets.SERVER_PORT || 22 }}
         script: |
-          cd ~/QAToolBox || exit 1
+          cd ~/QAToolBox || cd /home/qatoolbox/QAToolBox || exit 1
           git pull origin main
-          docker-compose -f docker-compose.china.yml down
-          docker-compose -f docker-compose.china.yml up -d --build
+          chmod +x quick-fix-deploy.sh
+          ./quick-fix-deploy.sh
           echo "部署完成！"
 
