--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -11,7 +11,7 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Deploy to server
       uses: appleboy/ssh-action@v0.1.5
@@ -19,39 +19,26 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
-        port: ${{ secrets.SERVER_PORT }}
+        port: ${{ secrets.SERVER_PORT || 22 }}
         script: |
           # 切换到项目目录
-          cd /home/qatoolbox/QAToolBox
-          
-          # 停止服务
-          sudo systemctl stop qatoolbox
+          cd ~/QAToolBox || cd /home/qatoolbox/QAToolBox || exit 1
           
           # 拉取最新代码
           git pull origin main
           
-          # 激活虚拟环境并更新依赖
-          source .venv/bin/activate
-          pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple --trusted-host pypi.tuna.tsinghua.edu.cn
-          
-          # 数据库迁移
-          python manage.py migrate
-          
-          # 收集静态文件
-          python manage.py collectstatic --noinput
-          
-          # 重启服务
-          sudo systemctl start qatoolbox
-          
-          # 等待服务启动
-          sleep 10
+          # 执行快速修复部署
+          chmod +x quick-fix-deploy.sh
+          ./quick-fix-deploy.sh
           
           # 检查服务状态
-          if sudo systemctl is-active --quiet qatoolbox; then
-            echo "✅ 部署成功！服务已启动"
-            echo "🌐 访问地址: https://shenyiqing.xin"
+          sleep 30
+          if curl -f http://localhost/health/ > /dev/null 2>&1; then
+            echo "✅ 部署成功！"
+            echo "🌐 访问地址: http://47.103.143.152"
+            echo "🌐 域名访问: http://shenyiqing.xin"
           else
-            echo "❌ 部署失败，服务启动异常"
-            sudo journalctl -u qatoolbox -n 20 --no-pager
+            echo "❌ 部署失败，请检查日志"
+            docker-compose logs web
             exit 1
           fi
