feat: 统一CI/CD系统，保持严格质量门禁标准
- 创建统一CI/CD工作流，替代7个冗余workflow文件
- 保持所有原有功能，无功能缩减
- 修复数据库配置冲突，支持PostgreSQL和SQLite自动切换
- 优化依赖管理，解决版本冲突
- 保持严格质量门禁标准：
  * 测试覆盖率要求：≥80%
  * 安全问题阈值：≤5个
  * 依赖漏洞阈值：0个
- 添加部署后验证脚本和详细使用指南
- 预期大幅减少workflow失败次数

--- a/requirements.txt
+++ b/requirements.txt
@@ -145,6 +145,9 @@ flake8==6.1.0
 black==23.12.1
 isort==5.13.2
 bandit==1.7.5
+mypy==1.8.0
+pylint==3.0.3
+safety==2.3.5
 
 # ===== 基础依赖（按字母排序，避免冲突） =====
 certifi==2025.1.31
