--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ lxml==4.9.3
 html5lib==1.1
 
 # ===== 图像处理 =====
-Pillow>=10.0.0
+Pillow>=9.5.0
 
 # ===== 数据处理和分析 =====
 pandas>=2.1.0
@@ -56,7 +56,7 @@ pyecharts==2.0.4
 
 # ===== 文档处理 =====
 python-docx==1.1.0
-python-pptx==0.6.22
+python-pptx>=0.6.22
 openpyxl==3.1.2
 xlrd==2.0.1
 xlwt==1.3.0
