--- a/requirements.txt
+++ b/requirements.txt
@@ -142,7 +142,7 @@ click-repl==0.3.0
 
 # ===== 代码质量 =====
 flake8==6.1.0
-black>=23.0.0,<24.0.0
+black>=22.0.0,<24.0.0
 isort==5.13.2
 bandit==1.7.5
 mypy==1.8.0
@@ -161,7 +161,7 @@ importlib_resources==6.5.2
 Jinja2==3.1.5
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
-packaging>=21.3,<22.0
+packaging>=21.3
 platformdirs==4.3.6
 pyparsing==3.2.1
 soupsieve==2.6
