--- a/requirements.txt
+++ b/requirements.txt
@@ -161,7 +161,7 @@ importlib_resources==6.5.2
 Jinja2==3.1.5
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
-packaging>=21.3
+packaging
 platformdirs==4.3.6
 pyparsing==3.2.1
 soupsieve==2.6
