修复GitHub Actions数据库连接问题
- 修复测试环境PostgreSQL连接配置
- 添加环境变量支持，在CI中使用postgres服务名
- 添加数据库迁移步骤
- 修复os模块导入问题
- 确保测试环境与CI环境一致

--- a/.github/workflows/unified-ci-cd.yml
+++ b/.github/workflows/unified-ci-cd.yml
@@ -211,12 +211,16 @@ jobs:
     
     - name: 数据库迁移
       run: |
-        echo "测试环境使用内存数据库，跳过迁移"
-        # 测试环境使用内存数据库，不需要迁移
-        # python manage.py migrate --settings=config.settings.testing
+        echo "等待PostgreSQL服务启动..."
+        sleep 10
+        echo "执行数据库迁移..."
+        python manage.py migrate --settings=config.settings.testing
       env:
         DJANGO_SETTINGS_MODULE: config.settings.testing
-        DATABASE_URL: sqlite:///:memory:
+        POSTGRES_HOST: postgres
+        POSTGRES_DB: test_qatoolbox
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
         REDIS_URL: redis://localhost:6379/0
     
     - name: 运行单元测试
@@ -243,7 +247,10 @@ jobs:
         echo "result=$TEST_RESULT" >> $GITHUB_OUTPUT
       env:
         DJANGO_SETTINGS_MODULE: config.settings.testing
-        DATABASE_URL: sqlite:///:memory:
+        POSTGRES_HOST: postgres
+        POSTGRES_DB: test_qatoolbox
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
         REDIS_URL: redis://localhost:6379/0
     
     - name: 提取覆盖率
