--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = config.settings.development
+DJANGO_SETTINGS_MODULE = config.settings.testing
 python_files = tests.py test_*.py *_tests.py
 testpaths = tests
 addopts = 
