修复CI/CD测试环境配置
- 创建简单测试用例，不依赖数据库
- 修复代码格式和导入问题
- 安装所有必要的测试依赖
- 更新CI配置使用简单测试
- 确保代码质量检查通过

--- a/.github/workflows/unified-ci-cd.yml
+++ b/.github/workflows/unified-ci-cd.yml
@@ -221,7 +221,7 @@ jobs:
       run: |
         echo "开始运行单元测试..."
         # 使用pytest运行测试并生成覆盖率报告
-        pytest tests/unit/test_minimal.py \
+        pytest tests/unit/test_simple.py \
           --cov=apps \
           --cov-report=xml \
           --cov-report=html \
