--- a/requirements.txt
+++ b/requirements.txt
@@ -95,9 +95,11 @@ pytz>=2023.3
 # ===== 工具库 =====
 tenacity==8.2.3
 prettytable==3.9.0
-qrcode==7.4.2
+qrcode[pil]==8.2
 simplejson==3.19.3
 six==1.17.0
+ratelimit==2.2.1
+pillow-heif==1.1.0
 
 # ===== 金融数据 =====
 yfinance==0.2.28
