feat: 完成多平台项目架构和核心服务启动
- ✅ 后端服务: Django + DRF + PostgreSQL + JWT认证
- ✅ 前端服务: Vue3管理后台 + Vue3用户界面
- ✅ 小程序: 微信小程序页面结构
- ✅ 移动端: Flutter应用项目结构
- ✅ 统一认证: 多平台共享登录系统
- ✅ API架构: RESTful API + WebSocket实时通信
- ✅ 监控系统: 错误监控 + 性能监控 + 用户行为分析
- ✅ 测试覆盖: 单元测试 + 集成测试 + 端到端测试
- ✅ 开发工具: 微信开发者工具 + 完整开发环境

核心功能:
- 健身模块: 运动记录、健康数据、社交分享
- 生活模块: 日记记录、美食分享、签到打卡
- 极客工具: PDF处理、爬虫工具、测试用例生成
- 社交模块: 聊天系统、心动匹配、塔罗占卜
- 分享功能: 内容分享、文件管理、权限控制

技术栈:
- 后端: Python 3.13 + Django 4.2.7 + PostgreSQL + Redis
- 前端: Vue 3 + TypeScript + Element Plus + Pinia
- 移动端: Flutter + Provider状态管理
- 小程序: 微信小程序原生开发
- 部署: Docker + Nginx + Gunicorn

项目状态: 🟢 核心服务正常运行，可开始功能开发

--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,3 @@
-# 数据库文件
-db.sqlite3
-*.db
-
-# 环境变量文件
-.env
-.env.local
-.env.production
-.env.development
-
-# 日志文件
-logs/
-*.log
-
-# 缓存文件
-.cache/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-*.so
-
-# 临时文件
-*.tmp
-*.temp
-*.swp
-*.swo
-*~
-
-# 媒体文件（生产环境）
-media/
-staticfiles/
-
-# 测试覆盖率
-.coverage
-htmlcov/
-.pytest_cache/
-.tox/
-
 # Python
 __pycache__/
 *.py[cod]
@@ -59,18 +19,101 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv/
 
 # Django
 *.log
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
 media/
+staticfiles/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# Frontend build
+frontend/*/dist/
+frontend/*/build/
+frontend/*/.vite/
+frontend/*/coverage/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# 操作系统
+# OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Flutter
+mobile/flutter/.dart_tool/
+mobile/flutter/.packages
+mobile/flutter/.pub-cache/
+mobile/flutter/.pub/
+mobile/flutter/build/
+mobile/flutter/.flutter-plugins
+mobile/flutter/.flutter-plugins-dependencies
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Cache
+.cache/
+*.cache
+
+# Backup files
+*.backup
+*.bak
+*.orig
+
+# Test files
+test-results/
+test-reports/
