--- a/frontend/admin-dashboard/package.json
+++ b/frontend/admin-dashboard/package.json
@@ -11,21 +11,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "element-plus": "^2.4.4",
-    "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.6.2",
-    "echarts": "^5.4.3",
-    "vue-echarts": "^6.6.1",
+    "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.11.0",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "element-plus": "^2.11.2",
     "lodash-es": "^4.17.21",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "vue": "^3.4.0",
+    "vue-echarts": "^6.6.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.10.5",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
